fix: changing color and font of input label to be more visible

--- a/caffeshop/static/admin/css/login.css
+++ b/caffeshop/static/admin/css/login.css
@@ -42,6 +42,8 @@
 .login .form-row label {
     display: block;
     line-height: 2em;
+    color: black;
+    font-weight: 400;
 }
 
 .login .form-row #id_username, .login .form-row #id_password {
